--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -110,6 +110,11 @@
   year = {2011}
 }
 
+@MISC{Habash05arabictokenization,,
+    author = {Nizar Habash and Owen Rambow},
+    title = {Arabic Tokenization, Part-of-Speech Tagging and Morphological Disambiguation in One Fell Swoop},
+    year = {2005}
+}
 
 @MISC{Attia_arabictokenization,
     author = {Mohammed A. Attia},
